Fixed multiple scrollbars present

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,7 @@
     flex-direction: flex-column;
     z-index: 1;
     height: 100vh;
+    overflow: hidden;
 }
 
 @media (max-width: 767px) {
